[package]
name = "login_term"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
aws-config = "0.55.2"
aws-sdk-cognitoidentityprovider = "0.27.0"
aws_get_secret_value = { git = "https://github.com/kano1101/aws_get_secret_value.git" }
cognito_secret_hash = { path = "../../rust/cognito_secret_hash" }
env_logger = "0.10.0"
log = "0.4.17"
reqwest = { version = "0.11.17", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
srp = { path = "../../aws/srp" }
tokio = { version = "1.28.0", features = ["macros"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["fmt"] }
